Ku01/kube_yaml/0801/test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-test-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
      - name: nginx-test-web
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: docker-pull-secret
