Ku01/kube_yaml/0801/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-web
spec:
  selector:
    app: main-web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-web
spec:
  selector:
    app: test-web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "kube.home.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main-web
            port: 
              number: 80
      - pathType: Prefix
        path: "/main"
        backend:
          service:
            name: main-web
            port: 
              number: 80
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: test-web
            port: 
              number: 80
